--- a/rush.yaml
+++ b/rush.yaml
@@ -81017,7 +81017,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A robotic policeman equipped with a multi-purpose shovel. It performs field work and security work at the same time.
+    A robotic policeman equipped with a multi-purpose shovel. He performs field work and security work at the same time.
   de:
   es:
   fr:
