--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -31,14 +31,18 @@
 # Spell Card: "Monster Reborn"
 - yugipedia: 1035520
   fake_password: 100200250
+# Spell Card: "Soul Exchange"
+- yugipedia: 1038586
+  fake_password: 100200251
 # Phantom Nightmare
 - set_abbreviation: PHNI
-  fake_password_range:
-    - 101203000
+  fake_password_range: 101203000
 # Legacy of Destruction
 - set_abbreviation: LEDE
   fake_password_range: 101204000
+# Infinite Forbidden
+- set_abbreviation: INFO
+  fake_password_range: 101205000
 # The Legend of Duelist Promotion Pack
 - set_abbreviation: TDPR
   fake_password_range: 100435000
-  
