--- a/rush.yaml
+++ b/rush.yaml
@@ -133943,6 +133943,7 @@ sets:
     set_name: Transamu of Transcendence
     rarities:
     - Ultra Rare
+    - Secret Rare
     - Over Rush Rare
 is_translation_unofficial:
   name:
