--- a/data/cards/04810828.yaml
+++ b/data/cards/04810828.yaml
@@ -59,6 +59,16 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: RA02-EN???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: INOV-DE037
     set_name: 'Invasion: Vengeance'
@@ -72,6 +82,16 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: RA02-DE???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: INOV-FR037
     set_name: 'Invasion: Vengeance'
@@ -85,6 +105,16 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: RA02-FR???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: INOV-IT037
     set_name: 'Invasion: Vengeance'
@@ -98,6 +128,16 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: RA02-IT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: INOV-PT037
     set_name: 'Invasion: Vengeance'
@@ -111,6 +151,16 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: RA02-PT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: INOV-JP037
     set_name: 'Invasion: Vengeance'
