--- a/data/cards/14087893.yaml
+++ b/data/cards/14087893.yaml
@@ -174,6 +174,16 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: RA02-EN???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   - set_number: PGD-035
     set_name: Pharaonic Guardian
     rarities:
@@ -322,6 +332,16 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: RA02-DE???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: DB2-FR232
     set_name: Dark Beginning 2
@@ -454,6 +474,16 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: RA02-FR???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: DB2-IT232
     set_name: Dark Beginning 2
@@ -586,6 +616,16 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: RA02-IT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: BP02-PT138
     set_name: 'Battle Pack 2: War of the Giants'
@@ -665,6 +705,16 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: RA02-PT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: PH-34
     set_name: Pharaonic Guardian (Japanese)
