--- a/data/cards/24508238.yaml
+++ b/data/cards/24508238.yaml
@@ -109,6 +109,16 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: RA02-EN???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   - set_number: DT05-EN003
     set_name: Duel Terminal 5a
     rarities:
@@ -176,6 +186,16 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: RA02-DE???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: STON-FR024
     set_name: Strike of Neos
@@ -235,6 +255,16 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: RA02-FR???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: STON-IT024
     set_name: Strike of Neos
@@ -298,6 +328,16 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: RA02-IT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: OP03-PT018
     set_name: OTS Tournament Pack 3
@@ -340,6 +380,16 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: RA02-PT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: STON-JP024
     set_name: Strike of Neos
