--- a/data/cards/29599813.yaml
+++ b/data/cards/29599813.yaml
@@ -69,11 +69,31 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: RA02-EN???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: AMDE-DE022
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+    - Collector's Rare
+  - set_number: RA02-DE???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
     - Collector's Rare
   fr:
   - set_number: AMDE-FR022
@@ -81,17 +101,47 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: RA02-FR???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: AMDE-IT022
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: RA02-IT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: AMDE-PT022
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+    - Collector's Rare
+  - set_number: RA02-PT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
     - Collector's Rare
   ja:
   - set_number: DBAD-JP022
