--- a/data/cards/40605147.yaml
+++ b/data/cards/40605147.yaml
@@ -84,6 +84,16 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: RA02-EN???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: BOSH-DE079
     set_name: Breakers of Shadow
@@ -117,6 +127,16 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+    - Collector's Rare
+  - set_number: RA02-DE???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
     - Collector's Rare
   fr:
   - set_number: BOSH-FR079
@@ -152,6 +172,16 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: RA02-FR???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: BOSH-IT079
     set_name: Breakers of Shadow
@@ -186,6 +216,16 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: RA02-IT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: BOSH-PT079
     set_name: Breakers of Shadow
@@ -219,6 +259,16 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+    - Collector's Rare
+  - set_number: RA02-PT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
     - Collector's Rare
   ja:
   - set_number: BOSH-JP079
