--- a/data/cards/41420027.yaml
+++ b/data/cards/41420027.yaml
@@ -123,6 +123,16 @@ sets:
     set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
+  - set_number: RA02-EN???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   - set_number: MRD-127
     set_name: Metal Raiders
     rarities:
@@ -214,6 +224,16 @@ sets:
     set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
+  - set_number: RA02-DE???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: MRD-F127
     set_name: Metal Raiders
@@ -289,6 +309,16 @@ sets:
     set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
+  - set_number: RA02-FR???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: PMT-I127
     set_name: Metal Raiders
@@ -364,6 +394,16 @@ sets:
     set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
+  - set_number: RA02-IT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: PMT-P127
     set_name: Metal Raiders
@@ -406,6 +446,16 @@ sets:
     set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
+  - set_number: RA02-PT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: ''
     set_name: Vol.6
