--- a/data/cards/67723438.yaml
+++ b/data/cards/67723438.yaml
@@ -67,6 +67,16 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: RA02-EN???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: TDGS-DE053
     set_name: The Duelist Genesis
@@ -93,6 +103,16 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+    - Collector's Rare
+  - set_number: RA02-DE???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
     - Collector's Rare
   fr:
   - set_number: TDGS-FR053
@@ -121,6 +141,16 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: RA02-FR???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: TDGS-IT053
     set_name: The Duelist Genesis
@@ -148,6 +178,16 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: RA02-IT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: LC5D-PT251
     set_name: Legendary Collection 5D's Mega Pack
@@ -169,6 +209,16 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+    - Collector's Rare
+  - set_number: RA02-PT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
     - Collector's Rare
   ja:
   - set_number: TDGS-JP053
