--- a/data/cards/75500286.yaml
+++ b/data/cards/75500286.yaml
@@ -93,6 +93,16 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: RA02-EN???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   - set_number: SJCS-EN005
     set_name: Shonen Jump Championship 2007 Prize Card B
     rarities:
@@ -158,6 +168,16 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: RA02-DE???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: PT03-FR001
     set_name: Pharaoh Tour 2007 promotional cards
@@ -215,6 +235,16 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: RA02-FR???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: PT03-IT001
     set_name: Pharaoh Tour 2007 promotional cards
@@ -272,6 +302,16 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: RA02-IT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: PGLD-PT068
     set_name: Premium Gold
@@ -313,6 +353,16 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: RA02-PT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: VB09-JP002
     set_name: The Valuable Book 9 promotional cards
