--- a/data/cards/84749824.yaml
+++ b/data/cards/84749824.yaml
@@ -92,6 +92,16 @@ sets:
     set_name: 'Structure Deck: Spirit Charmers'
     rarities:
     - Common
+  - set_number: RA02-EN???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: DREV-DE077
     set_name: Duelist Revolution
@@ -134,6 +144,16 @@ sets:
     set_name: 'Structure Deck: Spirit Charmers'
     rarities:
     - Common
+  - set_number: RA02-DE???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: DREV-FR077
     set_name: Duelist Revolution
@@ -176,6 +196,16 @@ sets:
     set_name: 'Structure Deck: Spirit Charmers'
     rarities:
     - Common
+  - set_number: RA02-FR???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: DREV-IT077
     set_name: Duelist Revolution
@@ -218,6 +248,16 @@ sets:
     set_name: 'Structure Deck: Spirit Charmers'
     rarities:
     - Common
+  - set_number: RA02-IT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: DL18-PT019
     set_name: Duelist League 18 participation cards
@@ -247,6 +287,16 @@ sets:
     set_name: 'Structure Deck: Spirit Charmers'
     rarities:
     - Common
+  - set_number: RA02-PT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: DREV-JP077
     set_name: Duelist Revolution
