--- a/data/cards/96729612.yaml
+++ b/data/cards/96729612.yaml
@@ -73,6 +73,16 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+  - set_number: RA02-EN???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   de:
   - set_number: SOVR-DE057
     set_name: Stardust Overdrive
@@ -106,6 +116,16 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+  - set_number: RA02-DE???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   fr:
   - set_number: SOVR-FR057
     set_name: Stardust Overdrive
@@ -139,6 +159,16 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+  - set_number: RA02-FR???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   it:
   - set_number: SOVR-IT057
     set_name: Stardust Overdrive
@@ -172,6 +202,16 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+  - set_number: RA02-IT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   pt:
   - set_number: THSF-PT053
     set_name: The Secret Forces
@@ -201,6 +241,16 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+  - set_number: RA02-PT???
+    set_name: 25th Anniversary Rarity Collection II
+    rarities:
+    - Super Rare
+    - Ultra Rare
+    - Secret Rare
+    - Platinum Secret Rare
+    - Quarter Century Secret Rare
+    - Ultimate Rare
+    - Collector's Rare
   ja:
   - set_number: SOVR-JP057
     set_name: Stardust Overdrive
