--- a/data/cards/24508238.yaml
+++ b/data/cards/24508238.yaml
@@ -8,7 +8,7 @@ name:
   it: Corvo D.D.
   pt: D.D. Corvo
   ja: <ruby>Ｄ<rt>ディー</rt></ruby>．<ruby>Ｄ<rt>ディー</rt></ruby>．クロウ
-  ja_romaji: Dī Dī Kurō
+  ja_romaji: Dī Dī Kurou
   ko: D.D. 크로우
   ko_rr: Di Di Keurou
   zh-TW: D.D.烏鴉
