--- a/data/cards/yugipedia1023329.yaml
+++ b/data/cards/yugipedia1023329.yaml
@@ -79,5 +79,4 @@ limit_regulation:
   ocg: Not yet released
 yugipedia_page_id: 1023329
 master_duel_rarity: UR
-fake_password:
-- 101203052
+fake_password: 101203052
