--- a/data/rush/19987.yaml
+++ b/data/rush/19987.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19987
 name:
   en: Transamu Praime Full Armor Nova
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -34,7 +35,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力は、［お互いの墓地のモンスターの種族の種類］×３００アップする。お互いの墓地のモンスターの種族が５種類以上の場合、このカードは相手の効果では破壊されず、１０種類以上の場合、さらにこのカードの攻撃力は３０００アップする。
   ko:
   zh-TW:
   zh-CN:
@@ -52,7 +54,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「トランザム・プライム・アーマーノヴァ」＋「トランザム・ライナック」
   ko:
   zh-TW:
   zh-CN:
@@ -61,7 +64,7 @@ series:
 - Transamu
 images:
 - index: 1
-  image: TransamuPraimeFullArmorNova-RDKP16-JP-OP.png
+  image: TransamuPraimeFullArmorNova-RDKP16-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP16-JP039
