--- a/data/rush/19990.yaml
+++ b/data/rush/19990.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19990
 name:
   en: Super Graphagas Archer
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の通常モンスター（レベル７／炎族）１体をデッキの上に戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力はターン終了時まで２５００アップする。その後、相手フィールドの表側表示モンスター（レベル９以下）１体を選んでその攻撃力をターン終了時まで１５００ダウンできる。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「クロマトグラファガス」＋「ＳＰアシスタント・アーチ」
   ko:
   zh-TW:
   zh-CN:
@@ -58,7 +61,7 @@ series:
 - Chemistry
 images:
 - index: 1
-  image: SuperGraphagasArcher-RDKP16-JP-OP.png
+  image: SuperGraphagasArcher-RDKP16-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP16-JP042
