--- a/data/rush/19986.yaml
+++ b/data/rush/19986.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19986
 name:
   en: Praime Cat Straynya
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -34,7 +35,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター（レベル７以上／光属性）の攻撃力は２００アップし、相手の効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
@@ -52,7 +54,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「プライムクロー・ガール」＋モンスター（光属性）
   ko:
   zh-TW:
   zh-CN:
@@ -61,7 +64,7 @@ series:
 - Praime
 images:
 - index: 1
-  image: PraimeCatStraynya-RDKP16-JP-OP.png
+  image: PraimeCatStraynya-RDKP16-JP-R.png
 sets:
   ja:
   - set_number: RD/KP16-JP038
