--- a/data/rush/19988.yaml
+++ b/data/rush/19988.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19988
 name:
   en: Transamuvelgr Rainac
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの上からカード３枚を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力は次の相手ターン終了時まで９００アップする。この効果の条件でモンスター（光属性・闇属性）が墓地へ送られた場合、さらに相手フィールドの全ての表側表示モンスターの攻撃力を次の相手ターン終了時まで１０００ダウンできる。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「トランザム・ライナック」＋「ヴォイドヴェルグ・レクイエム」
   ko:
   zh-TW:
   zh-CN:
@@ -58,7 +61,7 @@ series:
 - Transamu
 images:
 - index: 1
-  image: TransamuvelgrRainac-RDKP16-JP-OP.png
+  image: TransamuvelgrRainac-RDKP16-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP16-JP040
