--- a/data/rush/19989.yaml
+++ b/data/rush/19989.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19989
 name:
   en: Jointech Tridynabase
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -34,7 +35,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃は貫通する。元々のカード名が「ヴォイドヴェルグ・レクイエム」「アビスレイヤー・リヴァイアナイト」のモンスターをそれぞれ素材として墓地へ送ってこのカードをフュージョン召喚したターン、このカードは３回攻撃できる。
   ko:
   zh-TW:
   zh-CN:
@@ -52,7 +54,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「ジョインテック・ネストライダー・タンク」＋モンスター（機械族以外）×２
   ko:
   zh-TW:
   zh-CN:
@@ -60,7 +63,7 @@ series:
 - Jointech
 images:
 - index: 1
-  image: JointechTridynabase-RDKP16-JP-OP.png
+  image: JointechTridynabase-RDKP16-JP-R.png
 sets:
   ja:
   - set_number: RD/KP16-JP041
