--- a/data/rush/19991.yaml
+++ b/data/rush/19991.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19991
 name:
   en: Prophecy Flail of the Colors of the Wind, Butterflies, and Flowers
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示モンスター（レベル８以下）１体を選んで破壊する。その後、相手の墓地のモンスターを全てデッキに戻す事ができる。戻した場合、さらにこのカードの攻撃力はターン終了時まで１２００アップし、自分は１枚ドローする。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「風彩のプロフェシーフレーズ」＋「フィドルバドゥール」
   ko:
   zh-TW:
   zh-CN:
@@ -58,7 +61,7 @@ series:
 - Shaman Bandit
 images:
 - index: 1
-  image: ProphecyFlailoftheColorsoftheWindButterfliesandFlowers-RDKP16-JP-OP.png
+  image: ProphecyFlailoftheColorsoftheWindButterfliesandFlowers-RDKP16-JP-R.png
 sets:
   ja:
   - set_number: RD/KP16-JP043
