--- a/data/rush/19992.yaml
+++ b/data/rush/19992.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19992
 name:
   en: Celeb Rose Influencers
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手の墓地のモンスター１体を選んでデッキの下に戻し、このカードの攻撃力はターン終了時まで、［この効果で戻したモンスターのレベル］×２００アップする。このカードが装備魔法カードを装備している場合、さらにこのターン、このカードは効果では破壊されず、モンスターに２回攻撃できる。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「セレブローズ・エンチャンター」＋「セレブローズ・ウィズ」
   ko:
   zh-TW:
   zh-CN:
@@ -58,7 +61,7 @@ series:
 - Celeb Rose
 images:
 - index: 1
-  image: CelebRoseInfluencers-RDKP16-JP-OP.png
+  image: CelebRoseInfluencers-RDKP16-JP-UR.png
 sets:
   ja:
   - set_number: RD/KP16-JP044
