--- a/data/rush/19959.yaml
+++ b/data/rush/19959.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Roll a six-sided die. This card can attack a number of times equal to [the result] during this turn. Then, you can draw 1 card if the result is 3 or lower.
+    Roll a six-sided die. This turn, this card can attack a number of times, up to [the result]. Then, you can draw 1 card if the result was 3 or lower.
   de:
   es:
   fr:
