--- a/data/cards/62651957.yaml
+++ b/data/cards/62651957.yaml
@@ -45,10 +45,10 @@ series:
 images:
 - index: 1
   image: XHeadCannon-KC01-JP-UR.png
-  illustration: XHeadCannon-TF04-JP-VG.jpg
+  illustration: XHeadCannon-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: XHeadCannon-SBCB-EN-C-1E.png
-  illustration: XHeadCannon-TF04-EN-VG.jpg
+  illustration: XHeadCannon-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DR1-EN059
