--- a/data/cards/99724761.yaml
+++ b/data/cards/99724761.yaml
@@ -56,10 +56,10 @@ series:
 images:
 - index: 1
   image: XZTankCannon-SDKS-JP-C.png
-  illustration: XZTankCannon-TF04-JP-VG.jpg
+  illustration: XZTankCannon-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: XZTankCannon-SBCB-EN-C-1E.png
-  illustration: XZTankCannon-TF04-EN-VG.jpg
+  illustration: XZTankCannon-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DR1-EN108
