--- a/data/cards/02111707.yaml
+++ b/data/cards/02111707.yaml
@@ -56,10 +56,10 @@ series:
 images:
 - index: 1
   image: XYDragonCannon-KC01-JP-UR.png
-  illustration: XYDragonCannon-TF04-JP-VG.jpg
+  illustration: XYDragonCannon-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: XYDragonCannon-SBCB-EN-C-1E.png
-  illustration: XYDragonCannon-TF04-EN-VG.jpg
+  illustration: XYDragonCannon-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DR1-EN106
