--- a/rush.yaml
+++ b/rush.yaml
@@ -112536,6 +112536,8 @@ series:
 images:
 - index: 1
   image: EliteSecretInvestigatorMystery-RDKP14-JP-R.png
+- index: 2
+  image: EliteSecretInvestigatorMystery-RDBDG7-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP14-JP022
