--- a/data/cards/56993276.yaml
+++ b/data/cards/56993276.yaml
@@ -41,7 +41,7 @@ series:
 images:
 - index: 1
   image: Wattcancel-PHSW-JP-C.jpg
-  illustration: Wattcancel-TF06-JP-VG.png
+  illustration: Wattcancel-TF06-JP-VG-artwork.png
 - index: '1.1'
   image: Wattcancel-PHSW-EN-C-1E.png
   illustration: Wattcancel-MADU-EN-VG-artwork.png
