--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -977,7 +977,7 @@
   it: Signora della Fortuna
   pt: Senhora Fortuna
   ja: フォーチュンレディ
-  ja_romaji: Fochūnredi
+  ja_romaji: Fōchunredi
   ko: 포츈 레이디
   ko_rr: Pochyun Reidi
   zh-TW:
