--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -965,7 +965,7 @@ Fortune Lady:
   it: Signora della Fortuna
   pt: Senhora Fortuna
   ja: フォーチュンレディ
-  ja_romaji: Fochūnredi
+  ja_romaji: Fōchunredi
   ko: 포츈 레이디
   ko_rr: Pochyun Reidi
   zh-TW:
