--- a/data/cards/40044918.yaml
+++ b/data/cards/40044918.yaml
@@ -105,6 +105,10 @@ sets:
     rarities:
     - Common
     - Duel Terminal Normal Parallel Rare
+  - set_number: BLC1-EN003
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   - set_number: JUMP-EN012
     set_name: Shonen Jump Vol. 5, Issue 4 promotional card
     rarities:
@@ -163,6 +167,10 @@ sets:
     rarities:
     - Common
     - Duel Terminal Normal Parallel Rare
+  - set_number: BLC1-DE003
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: PT03-FR002
     set_name: Pharaoh Tour 2007 promotional cards
@@ -201,6 +209,10 @@ sets:
     rarities:
     - Common
     - Duel Terminal Normal Parallel Rare
+  - set_number: BLC1-FR003
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   it:
   - set_number: PT03-IT002
     set_name: Pharaoh Tour 2007 promotional cards
@@ -243,6 +255,10 @@ sets:
     rarities:
     - Common
     - Duel Terminal Normal Parallel Rare
+  - set_number: BLC1-IT003
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: OP09-PT001
     set_name: OTS Tournament Pack 9
@@ -265,6 +281,10 @@ sets:
     rarities:
     - Common
     - Duel Terminal Normal Parallel Rare
+  - set_number: BLC1-PT003
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: VJMP-JP017
     set_name: V Jump October 2006 promotional card
