--- a/data/cards/49202162.yaml
+++ b/data/cards/49202162.yaml
@@ -102,6 +102,10 @@ sets:
     rarities:
     - Ultra Rare
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: BLC1-EN002
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   de:
   - set_number: BLHR-DE046
     set_name: "Battles of Legend: Hero's Revenge"
@@ -120,6 +124,10 @@ sets:
     rarities:
     - Ultra Rare
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: BLC1-DE002
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: BLHR-FR046
     set_name: "Battles of Legend: Hero's Revenge"
@@ -138,6 +146,10 @@ sets:
     rarities:
     - Ultra Rare
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: BLC1-FR002
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   it:
   - set_number: BLHR-IT046
     set_name: "Battles of Legend: Hero's Revenge"
@@ -156,6 +168,10 @@ sets:
     rarities:
     - Ultra Rare
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: BLC1-IT002
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: BLHR-PT046
     set_name: "Battles of Legend: Hero's Revenge"
@@ -174,6 +190,10 @@ sets:
     rarities:
     - Ultra Rare
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: BLC1-PT002
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: LVP2-JP001
     set_name: LINK VRAINS Pack 2
