--- a/data/cards/80117527.yaml
+++ b/data/cards/80117527.yaml
@@ -75,6 +75,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-EN001
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   - set_number: BPW2-EN102
     set_name: 'War of the Giants: Round 2'
     rarities:
@@ -108,6 +112,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-DE001
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: GAOV-FR090
     set_name: Galactic Overlord
@@ -129,6 +137,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-FR001
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   it:
   - set_number: GAOV-IT090
     set_name: Galactic Overlord
@@ -150,6 +162,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-IT001
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: WGRT-PT102
     set_name: War of the Giants Reinforcements
@@ -167,6 +183,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-PT001
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: VB14-JP002
     set_name: The Valuable Book 14 promotional cards
