--- a/data/cards/69750536.yaml
+++ b/data/cards/69750536.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Um peixe com braços, pernas e dentes muito afiados.
   ja: |-
-    魚に手足が生えた魚人獣。鋭い歯でかみついてくる。
+    <ruby>魚<rt>さかな</rt></ruby>に手足が生えた<ruby>魚<rt>ぎょ</rt></ruby>人獣。鋭い歯でかみついてくる。
   ko: |-
     물고기에 손과 발이 생겨난 어인짐승. 날카로운 이빨로 씹어 온다.
   zh-TW: |-
