--- a/data/cards/01498130.yaml
+++ b/data/cards/01498130.yaml
@@ -5,7 +5,7 @@ name:
   de: Kagemusha der Sechs Samurai
   es: Kagemusha de los Seis Samuráis
   fr: Kagemusha des Six Samouraïs
-  it: Kagemusha dei Sei Samurai
+  it: Kagemusha - Sei Samurai Leggendario
   pt: Kagemusha dos Seis Samurais
   ja: <ruby>六<rt>ろく</rt></ruby><ruby>武<rt>ぶ</rt></ruby><ruby>衆<rt>しゅう</rt></ruby>の<ruby>影<rt>かげ</rt></ruby><ruby>武<rt>む</rt></ruby><ruby>者<rt>しゃ</rt></ruby>
   ja_romaji: Rokubushū no Kagemusha
