--- a/data/cards/63261835.yaml
+++ b/data/cards/63261835.yaml
@@ -73,6 +73,7 @@ sets:
   - set_number: ????-EN???
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Secret Rare
   de:
   - set_number: DLCS-DE148
     set_name: 'Dragons of Legend: The Complete Series'
@@ -81,6 +82,7 @@ sets:
   - set_number: ????-DE???
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Secret Rare
   fr:
   - set_number: DLCS-FR148
     set_name: 'Dragons of Legend: The Complete Series'
@@ -89,6 +91,7 @@ sets:
   - set_number: ????-FR???
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Secret Rare
   it:
   - set_number: DLCS-IT148
     set_name: 'Dragons of Legend: The Complete Series'
@@ -97,6 +100,7 @@ sets:
   - set_number: ????-IT???
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Secret Rare
   pt:
   - set_number: DLCS-PT148
     set_name: 'Dragons of Legend: The Complete Series'
@@ -105,6 +109,7 @@ sets:
   - set_number: ????-PT???
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Secret Rare
   ja:
   - set_number: VP20-JP002
     set_name: Prismatic Special Pack
