--- a/data/cards/19523799.yaml
+++ b/data/cards/19523799.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Inflija 800 pontos de dano aos Life Points do seu adversário.
   ja: |-
-    相手ライフに８００ポイントダメージを与える。
+    <ruby>相<rt>あい</rt></ruby><ruby>手<rt>て</rt></ruby>ライフに８００ポイントダメージを<ruby>与<rt>あた</rt></ruby>える。
   ko: |-
     상대의 라이프 포인트에 800 포인트의 데미지를 준다.
   zh-TW: |-
