--- a/data/cards/47852924.yaml
+++ b/data/cards/47852924.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Aumente os seus Life Points em 800 pontos.
   ja: |-
-    自分は８００ライフポイント回復する。
+    <ruby>自<rt>じ</rt></ruby><ruby>分<rt>ぶん</rt></ruby>は８００ライフポイント<ruby>回<rt>かい</rt></ruby><ruby>復<rt>ふく</rt></ruby>する。
   ko: |-
     자신은 800 라이프 포인트를 회복한다.
   zh-TW: |-
