--- a/data/cards/05126490.yaml
+++ b/data/cards/05126490.yaml
@@ -6,7 +6,7 @@ name:
   es: Sabio Neos
   fr: Néos le Sage
   it: Neos Uomo Saggio
-  pt:
+  pt: Neos Sábio
   ja: ネオス・ワイズマン
   ja_romaji: Neosu Waizuman
   ko: 네오스 와이즈맨
@@ -17,13 +17,13 @@ text:
   en: |-
     Cannot be Normal Summoned or Set. Must be Special Summoned (from your hand) by sending 1 face-up "Elemental HERO Neos" and 1 face-up "Yubel" you control to the GY. Cannot be destroyed by card effects. At the end of the Damage Step, if this card battled an opponent's monster: Inflict damage to your opponent equal to that opponent's monster's ATK, also you gain LP equal to that opponent's monster's DEF.
   de: |-
-    Kann nicht als Normalbeschwörung beschworen oder gesetzt werden. Muss als Spezialbeschwörung (von deiner Hand) beschworen werden, indem du 1 offenen „Elementar-HELD Neos“ und 1 offenen „Yubel“, die du kontrollierst, auf den Friedhof legst, und kann nicht auf andere Art als Spezialbeschwörung beschworen werden. Diese Karte kann nicht durch Karteneffekte zerstört werden. Am Ende des Damage Steps, falls diese Karte gegen ein Monster deines Gegners gekämpft hat: Füge deinem Gegner Schaden in Höhe der ATK des Monsters zu, gegen das es gekämpft hat, und du erhältst Life Points in Höhe der DEF des Monsters.
+    Kann nicht als Normalbeschwörung beschworen oder gesetzt werden. Muss als Spezialbeschwörung (von deiner Hand) beschworen werden, indem du 1 offenen „Elementar-HELD Neos“ und 1 offenen „Yubel“, die du kontrollierst, auf den Friedhof legst. Kann nicht durch Karteneffekte zerstört werden. Am Ende des Damage Steps, falls diese Karte gegen ein Monster eines Gegners gekämpft hat: Füge deinem Gegner Schaden in Höhe der ATK jenes Monsters des Gegners zu, zusätzlich erhältst du LP in Höhe der DEF jenes Monsters des Gegners.
   es: |-
-    Esta carta no puede ser Invocada de Modo Normal, ni Colocada. Esta carta no puede ser Invocada de Modo Especial excepto mandando al Cementerio 1 "Héroe Elemental Neos" boca arriba y 1 "Yubel" boca arriba (tienes que controlar a ambos). Esta carta no puede ser destruida por efectos de cartas. Si esta carta batalla con un monstruo de tu adversario, al final del Damage Step inflige daño a tu adversario igual al ATK del monstruo con el que batalló, y gana Life Points iguales a la DEF de ese monstruo.
+    No puede ser Invocado de Modo Normal, ni Colocado. Debe ser Invocado de Modo Especial (desde tu mano) mandando al Cementerio 1 "HÉROE Elemental Neos" boca arriba y 1 "Yubel" boca arriba que controles. No puede ser destruido por efectos de cartas. Al final del Damage Step, si esta carta batalló con un monstruo del adversario: inflige daño a tu adversario igual al ATK de ese monstruo del adversario, y además tú ganas LP iguales a la DEF de ese monstruo del adversario.
   fr: |-
-    Cette carte ne peut ni être Invoquée Normalement ni être Posée. Cette carte ne peut pas être Invoquée Spécialement, excepté en envoyant 1 "Néos, HÉROS Élémentaire" face recto et 1 "Yubel" face recto que vous contrôlez au Cimetière. Cette carte ne peut pas être détruite par les effets d'une carte. Si cette carte combat un monstre de l'adversaire, à la fin de la Damage Step, infligez des dommages à votre adversaire égaux à l'ATK du monstre qu'il a combattu, et gagnez des Life Points équivalents à la DEF de ce monstre.
+    Ni Invocable Normalement ni Posable Normalement. Uniquement Invocable Spécialement (depuis votre main) en envoyant 1 "Néos, HÉROS Élémentaire" face recto et 1 "Yubel" face recto que vous contrôlez au Cimetière. Non destructible par des effets de carte. À la fin de la Damage Step, si cette carte a combattu un monstre de l'adversaire : infligez des dommages à votre adversaire égaux à l'ATK du monstre de l'adversaire, et aussi, vous gagnez des LP égaux à la DEF du monstre de l'adversaire.
   it: |-
-    Non può essere Evocato Normalmente o Posizionato. Deve essere Evocato Specialmente (dalla tua mano) mandando 1 "Neos EROE Elementale" scoperto e 1 "Yubel" scoperto che controlli al Cimitero, e non può essere Evocato Specialmente in altri modi. Questa carta non può essere distrutta dagli effetti delle carte. Alla fine del Damage Step, se questa carta ha combattuto con un mostro dell'avversario: infliggi danni al tuo avversario pari all'ATK del mostro con cui ha combattuto, e tu guadagni Life Point pari al DEF di quel mostro.
+    Non può essere Evocato Normalmente o Posizionato. Deve essere Evocato Specialmente (dalla tua mano) mandando 1 "Neos EROE Elementale" scoperto e 1 "Yubel" scoperto che controlli al Cimitero. Non può essere distrutto dagli effetti delle carte. Alla fine del Damage Step, se questa carta ha combattuto con un mostro dell'avversario: infliggi al tuo avversario danno pari all'ATK di quel mostro dell'avversario, inoltre tu guadagni LP pari al DEF di quel mostro dell'avversario.
   pt: |-
     Não pode ser Invocado por Invocação-Normal ou Baixado. Deve ser Invocado por Invocação-Especial (da sua mão) ao enviar 1 "Neos, o HERÓI do Elemento" com a face para cima e 1 "Yubel" com a face para cima que você controla para o Cemitério. Não pode ser destruído por efeitos de card. No final da Etapa de Dano, se este card batalhou um monstro do oponente: cause dano ao seu oponente igual ao ATK desse monstro do oponente e, além disso, você ganha PV igual à DEF desse monstro do oponente.
   ja: |-
@@ -33,10 +33,7 @@ text:
   zh-TW: |-
     此卡無法通常召喚。可將我方怪獸區的正面表示的，「元素－英雄 新宇俠」與「尤貝爾」各１隻送至墓地特殊召喚。①：場上的此卡不會因效果被破壞。②：在此卡與對方怪獸進行戰鬥的傷害步驟結束時發動。給予對方等同於該對方怪獸的攻擊力數值的傷害。依據該對方怪獸的守備力數值回復我方LP。
   zh-CN: |-
-    此卡不可通常召唤。
-    仅可在将自己怪兽区域的、表侧表示的“元素－英雄 新宇侠”和“尤贝尔”各１只送至墓地的情况下特殊召唤。
-    ①：场上的此卡不会因效果被破坏。
-    ②：此卡与对手怪兽进行战斗的伤害步骤结束时发动。给予对手相当于该对手怪兽攻击力数值的伤害。依该对手怪兽守备力的数值恢复自己的LP。
+    此卡不可通常召唤。仅可在将自己怪兽区域的、表侧表示的“元素－英雄 新宇侠”和“尤贝尔”各１只送至墓地的情况下特殊召唤。①：场上的此卡不会因效果被破坏。②：此卡与对手怪兽进行战斗的伤害步骤结束时发动。给予对手相当于该对手怪兽攻击力数值的伤害。依该对手怪兽守备力的数值恢复自己的LP。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: LIGHT
@@ -94,6 +91,11 @@ sets:
     rarities:
     - Ultra Rare
   - set_number: BLC1-IT007
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLC1-PT007
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Secret Rare
