--- a/data/cards/08240199.yaml
+++ b/data/cards/08240199.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Ultra Rare
+  - set_number: BLC1-EN014
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: SHVI-DE020
     set_name: Shining Victories
@@ -78,6 +82,10 @@ sets:
     - Secret Rare
   - set_number: LDS2-DE011
     set_name: 'Legendary Duelists: Season 2'
+    rarities:
+    - Ultra Rare
+  - set_number: BLC1-DE014
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Ultra Rare
   fr:
@@ -97,6 +105,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Ultra Rare
+  - set_number: BLC1-FR014
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: SHVI-IT020
     set_name: Shining Victories
@@ -114,6 +126,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Ultra Rare
+  - set_number: BLC1-IT014
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SHVI-PT020
     set_name: Shining Victories
@@ -129,6 +145,10 @@ sets:
     - Secret Rare
   - set_number: LDS2-PT011
     set_name: 'Legendary Duelists: Season 2'
+    rarities:
+    - Ultra Rare
+  - set_number: BLC1-PT014
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Ultra Rare
   ja:
