--- a/data/cards/30100551.yaml
+++ b/data/cards/30100551.yaml
@@ -67,26 +67,46 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLC1-EN013
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BLLR-DE044
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLC1-DE013
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BLLR-FR044
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLC1-FR013
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BLLR-IT044
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLC1-IT013
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BLLR-PT044
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLC1-PT013
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CORE-JP083
     set_name: Clash of Rebellions
