--- a/data/cards/05614808.yaml
+++ b/data/cards/05614808.yaml
@@ -66,26 +66,46 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLC1-EN011
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BLLR-DE020
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLC1-DE011
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BLLR-FR020
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLC1-FR011
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BLLR-IT020
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLC1-IT011
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BLLR-PT020
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLC1-PT011
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CP17-JP020
     set_name: Collectors Pack 2017
