--- a/data/cards/19324993.yaml
+++ b/data/cards/19324993.yaml
@@ -64,26 +64,46 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: BLC1-EN009
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   de:
   - set_number: DUOV-DE013
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: BLC1-DE009
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: DUOV-FR013
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: BLC1-FR009
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   it:
   - set_number: DUOV-IT013
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: BLC1-IT009
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: DUOV-PT013
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: BLC1-PT009
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: LVP3-JP031
     set_name: LINK VRAINS Pack 3
