--- a/data/cards/31764700.yaml
+++ b/data/cards/31764700.yaml
@@ -6,7 +6,7 @@ name:
   es: Yubel - La Peor Pesadilla
   fr: Yubel - Cauchemar Ultime
   it: Yubel - Incubo Finale
-  pt:
+  pt: Yubel - O Pesadelo Supremo
   ja: ユベル－<ruby>Ｄａｓ　Ｅｘｔｒｅｍｅｒ　Ｔｒａｕｒｉｇ　Ｄｒａｃｈｅｎ<rt>ダス・エクストレーム・トラウリヒ・ドラッヘ</rt></ruby>
   ja_romaji: Yuberu - Dasu Ekusutorēmu Toraurihi Dorahhe
   ko: 유벨－다스 엑스트레머 트라우리히 드라헨
@@ -15,15 +15,15 @@ name:
   zh-CN: 尤贝尔－“悲狂之龙”
 text:
   en: |-
-    Cannot be Normal Summoned or Set. Must be Special Summoned by "Yubel - Terror Incarnate", and cannot be Special Summoned by other ways. This card cannot be destroyed by battle. You take no Battle Damage from battles involving this card. At the end of the Damage Step, if this face-up Attack Position card battles an opponent's monster: Inflict damage equal to that monster's ATK to your opponent, also destroy that monster.
+    Cannot be Normal Summoned or Set. Must be Special Summoned by "Yubel - Terror Incarnate". Cannot be destroyed by battle. You take no battle damage from battles involving this card. At the end of the Damage Step, if this face-up Attack Position card battled an opponent's monster: Inflict damage to your opponent equal to that opponent's monster's ATK, also destroy that monster.
   de: |-
-    Kann nicht als Normalbeschwörung beschworen oder gesetzt werden. Muss mit „Yubel - Terrorinkarnation“ als Spezialbeschwörung beschworen werden und kann nicht auf andere Art als Spezialbeschwörung beschworen werden. Diese Karte kann nicht durch Kampf zerstört werden. Du erhältst keinen Kampfschaden aus Kämpfen mit dieser Karte. Am Ende des Damage Steps, falls diese Karte in offener Angriffsposition gegen ein Monster deines Gegners kämpft: Füge deinem Gegner Schaden in Höhe der ATK des Monsters zu und zerstöre das Monster.
+    Kann nicht als Normalbeschwörung beschworen oder gesetzt werden. Muss durch „Yubel - Terrorinkarnation“ als Spezialbeschwörung beschworen werden. Kann nicht durch Kampf zerstört werden. Du erhältst keinen Kampfschaden aus Kämpfen, an denen diese Karte beteiligt ist. Am Ende des Damage Steps, falls diese Karte in offener Angriffsposition gegen ein Monster eines Gegners gekämpft hat: Füge deinem Gegner Schaden in Höhe der ATK jenes Monsters zu, zusätzlich zerstöre jenes Monster.
   es: |-
-    No puede ser Invocado de Modo Normal ni Colocado. Debe ser Invocado de Modo Especial por "Yubel - Terror Encarnado" y no puede ser Invocado de Modo Especial de otra forma. Esta carta no puede ser destruida en batalla. No recibes daño de batalla de batallas en las que esté involucrada esta carta. Al final del Damage Step, si esta carta en Posición de Ataque boca arriba batalla con un monstruo de tu adversario: inflige daño a tu adversario igual al ATK de ese monstruo, y además destruye ese monstruo.
+    No puede ser Invocado de Modo Normal, ni Colocado. Debe ser Invocado de Modo Especial por "Yubel - Terror Encarnado". No puede ser destruido en batalla. No recibes daño de batalla de batallas que involucren esta carta. Al final del Damage Step, si esta carta en Posición de Ataque boca arriba batalló con un monstruo del adversario: inflige daño a tu adversario igual al ATK de ese monstruo, y además destruye ese monstruo.
   fr: |-
-    Ni Invocable Normalement ni Posable. Uniquement Invocable Spécialement avec "Yubel - Terreur Incarnée" et non Invocable Spécialement autrement. Cette carte ne peut pas être détruite au combat. Vous ne recevez aucun dommage de combat de combats impliquant cette carte. À la fin de la Damage Step, si cette carte en Position d'Attaque face recto combat un monstre de votre adversaire : infligez des dommages à votre adversaire égaux à l'ATK du monstre, et détruisez aussi le monstre.
+    Ni Invocable Normalement ni Posable Normalement. Uniquement Invocable Spécialement avec "Yubel - Terreur Incarnée". Non destructible au combat. Vous ne recevez aucun dommage de combat de combats impliquant cette carte. À la fin de la Damage Step, si cette carte en Position d'Attaque face recto a combattu un monstre de l'adversaire : infligez des dommages à votre adversaire égaux à l'ATK du monstre, et aussi, détruisez le monstre.
   it: |-
-    Non può essere Evocato Normalmente o Posizionato. Deve essere Evocato Specialmente da "Yubel - Terrore Incarnato", e non può essere Evocato Specialmente in altri modi. Questa carta non può essere distrutta in battaglia. Non subisci danni da combattimento da battaglie che coinvolgono questa carta. Alla fine del Damage Step, se questa carta scoperta e in Posizione di Attacco combatte con un mostro del tuo avversario: infliggi al tuo avversario danni pari all'ATK di quel mostro, inoltre distruggi quel mostro.
+    Non può essere Evocato Normalmente o Posizionato. Deve essere Evocato Specialmente da "Yubel - Terrore Incarnato". Non può essere distrutto in battaglia. Non subisci danni da combattimento da battaglie che coinvolgono questa carta. Alla fine del Damage Step, se questa carta scoperta e in Posizione di Attacco ha combattuto con un mostro dell'avversario: infliggi al tuo avversario danni pari all'ATK di quel mostro, inoltre distruggi quel mostro.
   pt: |-
     Não pode ser Invocado por Invocação-Normal ou Baixado. Deve ser Invocado por Invocação-Especial por "Yubel - Encarnação do Terror". Não pode ser destruído em batalha. Você não sofre dano de batalha das batalhas envolvendo este card. No final da Etapa de Dano, se este card com a face para cima em Posição de Ataque batalhou um monstro do oponente: cause dano igual ao ATK desse monstro ao seu oponente e, além disso, destrua esse monstro.
   ja: |-
@@ -60,6 +60,10 @@ sets:
     set_name: Ra Yellow Mega Pack
     rarities:
     - Rare
+  - set_number: BLC1-EN029
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: PTDN-DE008
     set_name: Phantom Darkness
@@ -73,6 +77,10 @@ sets:
     set_name: Ra Yellow Mega Pack
     rarities:
     - Rare
+  - set_number: BLC1-DE029
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: PTDN-FR008
     set_name: Phantom Darkness
@@ -82,6 +90,10 @@ sets:
     set_name: Ra Yellow Mega Pack
     rarities:
     - Rare
+  - set_number: BLC1-FR029
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: PTDN-IT008
     set_name: Phantom Darkness
@@ -95,6 +107,15 @@ sets:
     set_name: Ra Yellow Mega Pack
     rarities:
     - Rare
+  - set_number: BLC1-IT029
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLC1-PT029
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: PTDN-JP008
     set_name: Phantom Darkness
