--- a/data/cards/40854197.yaml
+++ b/data/cards/40854197.yaml
@@ -71,6 +71,10 @@ sets:
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-EN004
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   - set_number: YG04-EN001
     set_name: Yu-Gi-Oh! GX Volume 4 promotional card
     rarities:
@@ -88,6 +92,10 @@ sets:
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-DE004
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: YG04-FR001
     set_name: Yu-Gi-Oh! GX Volume 4 promotional card
@@ -105,6 +113,10 @@ sets:
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-FR004
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   it:
   - set_number: GENF-ITSE1
     set_name: 'Generation Force: Special Edition'
@@ -118,6 +130,10 @@ sets:
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-IT004
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: OP05-PT023
     set_name: OTS Tournament Pack 5
@@ -127,6 +143,10 @@ sets:
     set_name: "Battles of Legend: Hero's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-PT004
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: YG04-JP001
     set_name: Yu-Gi-Oh! GX Volume 4 promotional card
