--- a/data/cards/46772449.yaml
+++ b/data/cards/46772449.yaml
@@ -70,6 +70,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-EN015
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: LVAL-DE056
     set_name: Legacy of the Valiant
@@ -81,6 +85,10 @@ sets:
     - Secret Rare
   - set_number: BLLR-DE068
     set_name: "Battles of Legend: Light's Revenge"
+    rarities:
+    - Ultra Rare
+  - set_number: BLC1-DE015
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Ultra Rare
   fr:
@@ -96,6 +104,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-FR015
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: LVAL-IT056
     set_name: Legacy of the Valiant
@@ -109,6 +121,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-IT015
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LVAL-PT056
     set_name: Legacy of the Valiant
@@ -120,6 +136,10 @@ sets:
     - Secret Rare
   - set_number: BLLR-PT068
     set_name: "Battles of Legend: Light's Revenge"
+    rarities:
+    - Ultra Rare
+  - set_number: BLC1-PT015
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Ultra Rare
   ja:
