--- a/data/cards/55063751.yaml
+++ b/data/cards/55063751.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: BLC1-EN005
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   de:
   - set_number: DOCS-DE088
     set_name: Dimension of Chaos
@@ -88,6 +92,10 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: BLC1-DE005
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: DOCS-FR088
     set_name: Dimension of Chaos
@@ -109,6 +117,10 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: BLC1-FR005
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   it:
   - set_number: DOCS-IT088
     set_name: Dimension of Chaos
@@ -130,6 +142,10 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: BLC1-IT005
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: DOCS-PT088
     set_name: Dimension of Chaos
@@ -151,6 +167,10 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: BLC1-PT005
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: EP16-JP024
     set_name: Extra Pack 2016
