--- a/data/cards/57774843.yaml
+++ b/data/cards/57774843.yaml
@@ -85,6 +85,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-EN012
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: LODT-DE026
     set_name: Light of Destruction
@@ -122,6 +126,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-DE012
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: LODT-FR026
     set_name: Light of Destruction
@@ -153,6 +161,10 @@ sets:
     - Ultra Rare
   - set_number: BLLR-FR041
     set_name: "Battles of Legend: Light's Revenge"
+    rarities:
+    - Ultra Rare
+  - set_number: BLC1-FR012
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Ultra Rare
   it:
@@ -192,6 +204,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-IT012
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: PGLD-PT072
     set_name: Premium Gold
@@ -207,6 +223,10 @@ sets:
     - Ultra Rare
   - set_number: BLLR-PT041
     set_name: "Battles of Legend: Light's Revenge"
+    rarities:
+    - Ultra Rare
+  - set_number: BLC1-PT012
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Ultra Rare
   ja:
