--- a/data/cards/67508932.yaml
+++ b/data/cards/67508932.yaml
@@ -2,11 +2,11 @@ konami_id: 14163
 password: 67508932
 name:
   en: Timelord Progenitor Vorpgate
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Herr der Zeit Progenitor Vorpgate
+  es: Vorpgate, el Señor del Tiempo Progenitor
+  fr: Vorpgate le Seigneur du Temps Progéniteur
+  it: Signore del Tempo Progenitore Vorpgate
+  pt: Vorportal, o Senhor do Tempo Progenitor
   ja: <ruby>時<rt>じ</rt></ruby><ruby>械<rt>かい</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>祖<rt>そ</rt></ruby>ヴルガータ
   ja_romaji: Jikaishinso Vurugāta
   ko: 시계신조 불가타
@@ -59,10 +59,34 @@ images:
   image: TimelordProgenitorVorpgate-YA06-EN-UR-LE.png
 sets:
   en:
+  - set_number: BLC1-EN008
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   - set_number: YA06-EN001
     set_name: Yu-Gi-Oh! ARC-V Volume 6 promotional card
     rarities:
     - Ultra Rare
+  de:
+  - set_number: BLC1-DE008
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
+  fr:
+  - set_number: BLC1-FR008
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
+  it:
+  - set_number: BLC1-IT008
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
+  pt:
+  - set_number: BLC1-PT008
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: YA06-JP001
     set_name: Yu-Gi-Oh! ARC-V Volume 6 promotional card
