--- a/data/cards/78144171.yaml
+++ b/data/cards/78144171.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-EN006
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   - set_number: JUMP-EN090
     set_name: Weekly Shonen Jump June 2019 membership promotional cards
     rarities:
@@ -69,9 +73,17 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-DE006
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: BLAR-FR050
     set_name: 'Battles of Legend: Armageddon'
+    rarities:
+    - Secret Rare
+  - set_number: BLC1-FR006
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Secret Rare
   it:
@@ -79,9 +91,17 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-IT006
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: BLAR-PT050
     set_name: 'Battles of Legend: Armageddon'
+    rarities:
+    - Secret Rare
+  - set_number: BLC1-PT006
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Secret Rare
   ja:
