--- a/data/cards/78371393.yaml
+++ b/data/cards/78371393.yaml
@@ -6,7 +6,7 @@ name:
   es: Yubel
   fr: Yubel
   it: Yubel
-  pt:
+  pt: Yubel
   ja: ユベル
   ja_romaji: Yuberu
   ko: 유벨
@@ -15,15 +15,15 @@ name:
   zh-CN: 尤贝尔
 text:
   en: |-
-    This card cannot be destroyed by battle. You take no Battle Damage from battles involving this card. Before damage calculation, when this face-up Attack Position card is attacked by an opponent's monster: Inflict damage to your opponent equal to that monster's ATK. During your End Phase: Tribute 1 other monster or destroy this card. When this card is destroyed, except by its own effect: Its owner can Special Summon 1 "Yubel - Terror Incarnate" from their hand, Deck, or Graveyard.
+    Cannot be destroyed by battle. You take no battle damage from battles involving this card. Before damage calculation, if this face-up Attack Position card is targeted for an attack: Inflict damage to your opponent equal to that attacking monster's ATK. Once per turn, during your End Phase: Tribute 1 other monster or destroy this card. When this card is destroyed, except by its own effect: Its owner can Special Summon 1 "Yubel - Terror Incarnate" from their hand, Deck, or GY.
   de: |-
-    Diese Karte kann nicht durch Kampf zerstört werden. Du erhältst keinen Kampfschaden aus Kämpfen mit dieser Karte. Vor der Schadensberechnung, wenn diese Karte in offener Angriffsposition von einem Monster deines Gegners angegriffen wird: Füge deinem Gegner Schaden in Höhe der ATK des Monsters zu. Während deiner End Phase: Biete 1 anderes Monster als Tribut an oder zerstöre diese Karte. Wenn diese Karte zerstört wird, außer durch ihren eigenen Effekt: Ihr Besitzer kann 1 „Yubel - Terrorinkarnation“ als Spezialbeschwörung von seiner Hand, seinem Deck oder seinem Friedhof beschwören.
+    Kann nicht durch Kampf zerstört werden. Du erhältst keinen Kampfschaden aus Kämpfen, an denen diese Karte beteiligt ist. Vor der Schadensberechnung, falls diese Karte in offener Angriffsposition als Angriffsziel gewählt wird: Füge deinem Gegner Schaden in Höhe der ATK jenes angreifenden Monsters zu. Einmal pro Spielzug, während deiner End Phase: Biete 1 anderes Monster als Tribut an oder zerstöre diese Karte. Wenn diese Karte zerstört wird, außer durch ihren eigenen Effekt: Ihr Besitzer kann 1 „Yubel - Terrorinkarnation“ als Spezialbeschwörung von seiner Hand, seinem Deck oder seinem Friedhof beschwören.
   es: |-
-    Esta carta no puede ser destruida en batalla. No recibes daño de batalla de batallas en las que esté involucrada esta carta. Antes del cálculo de daño, cuando esta carta en Posición de Ataque boca arriba es atacada por un monstruo de tu adversario: inflige daño a tu adversario igual al ATK de ese monstruo. Durante tu End Phase: Sacrifica 1 monstruo o destruye esta carta. Cuando esta carta es destruida, excepto por su propio efecto: su dueño puede Invocar de Modo Especial, desde su mano, Deck o Cementerio, 1 "Yubel - Terror Encarnado".
+    No puede ser destruido en batalla. No recibes daño de batalla de batallas que involucren esta carta. Antes del cálculo de daño, si esta carta en Posición de Ataque boca arriba es seleccionada para un ataque: inflige daño a tu adversario igual al ATK de ese monstruo atacante. Una vez por turno, durante tu End Phase: Sacrifica otro monstruo o destruye esta carta. Cuando esta carta es destruida, excepto por su propio efecto: su dueño puede Invocar de Modo Especial, desde su mano, Deck o Cementerio, 1 "Yubel - Terror Encarnado".
   fr: |-
-    Cette carte ne peut pas être détruite au combat. Vous ne recevez aucun dommage de combat de combats impliquant cette carte. Avant le calcul des dommages, lorsque cette carte en Position d'Attaque face recto est attaquée par un monstre de votre adversaire : infligez des dommages à votre adversaire égaux à l'ATK du monstre. Durant votre End Phase : Sacrifiez 1 autre monstre ou détruisez cette carte. Lorsque cette carte est détruite, sauf par son propre effet : son propriétaire peut Invoquer Spécialement 1 "Yubel - Terreur Incarnée" depuis sa main, son Deck ou son Cimetière.
+    Non destructible au combat. Vous ne recevez aucun dommage de combat de combats impliquant cette carte. Avant le calcul des dommages, si cette carte en Position d'Attaque face recto est ciblée par une attaque : infligez des dommages à votre adversaire égaux à l'ATK du monstre attaquant. Une fois par tour, durant votre End Phase : Sacrifiez 1 autre monstre ou détruisez cette carte. Lorsque cette carte est détruite, sauf par son propre effet : son propriétaire peut Invoquer Spécialement 1 "Yubel - Terreur Incarnée" depuis sa main, Deck ou Cimetière.
   it: |-
-    Questa carta non può essere distrutta in battaglia. Non subisci danni da combattimento da battaglie che coinvolgono questa carta. Prima del calcolo dei danni, quando questa carta scoperta in Posizione di Attacco viene attaccata da un mostro del tuo avversario: infliggi al tuo avversario danni pari all'ATK di quel mostro. Durante la tua End Phase: offri come Tributo 1 altro mostro, oppure distruggi questa carta. Quando questa carta viene distrutta, eccetto che per il proprio effetto: il suo proprietario può Evocare Specialmente 1 "Yubel - Terrore Incarnato" dalla sua mano, Deck o Cimitero.
+    Non può essere distrutto in battaglia. Non subisci danni da combattimento da battaglie che coinvolgono questa carta. Prima del calcolo dei danni, se questa carta scoperta in Posizione di Attacco viene scelta come bersaglio per un attacco: infliggi al tuo avversario danni pari all'ATK di quel mostro attaccante. Una volta per turno, durante la tua End Phase: offri come Tributo 1 altro mostro, oppure distruggi questa carta. Quando questa carta viene distrutta, eccetto che dal suo stesso effetto: il suo proprietario può Evocare Specialmente 1 "Yubel - Terrore Incarnato" dalla sua mano, Deck o Cimitero.
   pt: |-
     Não pode ser destruído em batalha. Você não sofre dano de batalha das batalhas envolvendo este card. Antes do cálculo de dano, se este card com a face para cima em Posição de Ataque for escolhido como alvo de um ataque: cause dano ao seu oponente igual ao ATK desse monstro atacante. Uma vez por turno, durante sua Fase Final: ofereça 1 outro monstro como Tributo ou destrua este card. Quando este card for destruído, exceto por seu próprio efeito: seu dono pode Invocar por Invocação-Especial 1 "Yubel - Encarnação do Terror" da mão, do Deck ou do Cemitério dele.
   ja: |-
@@ -33,10 +33,7 @@ text:
   zh-TW: |-
     ①：此卡不會因戰鬥被破壞，我方不會受到此卡戰鬥的戰鬥傷害。②：在攻擊表示的此卡被選為攻擊對象的狀況下，在該傷害計算前發動。依據該攻擊怪獸的攻擊力給予對方傷害。③：在我方結束階段發動。解放我方場上１隻其他怪獸或破壞此卡。④：可在此卡因③的效果以外被破壞時發動。從我方手牌・牌組・墓地選擇１隻「尤貝爾－被憎惡的騎士」特殊召喚。
   zh-CN: |-
-    ①：此卡不会因战斗被破坏，因此卡的战斗对自己造成的战斗伤害变为０。
-    ②：攻击表示的此卡在被选择为攻击对象的情况下，在该伤害计算前发动。给予对手相当于攻击怪兽的攻击力数值的伤害。
-    ③：在自己的结束阶段发动。解放自己场上１只其他的怪兽，或将此卡破坏。
-    ④：此卡因此③效果以外的方式被破坏时可以发动。从自己的手牌・牌组・墓地将１只“尤贝尔－“忌避骑士””特殊召唤。
+    ①：此卡不会因战斗被破坏，因此卡的战斗对自己造成的战斗伤害变为０。②：攻击表示的此卡在被选择为攻击对象的情况下，在该伤害计算前发动。给予对手相当于攻击怪兽的攻击力数值的伤害。③：在自己的结束阶段发动。解放自己场上１只其他的怪兽，或将此卡破坏。④：此卡因此③效果以外的方式被破坏时可以发动。从自己的手牌・牌组・墓地将１只“尤贝尔－“忌避骑士””特殊召唤。
 card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: DARK
@@ -62,9 +59,10 @@ sets:
     set_name: Ra Yellow Mega Pack
     rarities:
     - Rare
-  - set_number: ????-EN???
+  - set_number: BLC1-EN027
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   de:
   - set_number: PTDN-DE006
     set_name: Phantom Darkness
@@ -78,9 +76,10 @@ sets:
     set_name: Ra Yellow Mega Pack
     rarities:
     - Rare
-  - set_number: ????-DE???
+  - set_number: BLC1-DE027
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   fr:
   - set_number: PTDN-FR006
     set_name: Phantom Darkness
@@ -90,9 +89,10 @@ sets:
     set_name: Ra Yellow Mega Pack
     rarities:
     - Rare
-  - set_number: ????-FR???
+  - set_number: BLC1-FR027
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   it:
   - set_number: PTDN-IT006
     set_name: Phantom Darkness
@@ -106,13 +106,15 @@ sets:
     set_name: Ra Yellow Mega Pack
     rarities:
     - Rare
-  - set_number: ????-IT???
+  - set_number: BLC1-IT027
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   pt:
-  - set_number: ????-PT???
+  - set_number: BLC1-PT027
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   ja:
   - set_number: PTDN-JP006
     set_name: Phantom Darkness
