--- a/data/cards/02572890.yaml
+++ b/data/cards/02572890.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 威风魔灵・暴风
 text:
   en: |-
-    When a monster(s) would be Special Summoned, or a monster effect is activated: Tribute 1 WIND Spellcaster-Type monster; negate the Summon or activation, and if you do, destroy that card.
+    When a monster(s) would be Special Summoned, or a monster effect is activated: Tribute 1 WIND Spellcaster monster; negate the Summon or activation, and if you do, destroy that card.
   de: |-
     Wenn ein oder mehr Monster als Spezialbeschwörung beschworen würden oder ein Monstereffekt aktiviert wird: Biete 1 WIND Monster vom Typ Hexer als Tribut an; annulliere die Beschwörung oder Aktivierung und falls du dies tust, zerstöre die Karte.
   es: |-
@@ -59,6 +59,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP24-EN027
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   de:
   - set_number: DOCS-DE073
     set_name: Dimension of Chaos
@@ -66,6 +70,10 @@ sets:
     - Common
   - set_number: MP16-DE159
     set_name: 2016 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: OP24-DE027
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   fr:
@@ -77,6 +85,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP24-FR027
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   it:
   - set_number: DOCS-IT073
     set_name: Dimension of Chaos
@@ -86,6 +98,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP24-IT027
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   pt:
   - set_number: DOCS-PT073
     set_name: Dimension of Chaos
@@ -93,6 +109,10 @@ sets:
     - Common
   - set_number: MP16-PT159
     set_name: 2016 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: OP24-PT027
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   ja:
