--- a/data/cards/18144506.yaml
+++ b/data/cards/18144506.yaml
@@ -87,9 +87,10 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
-  - set_number: OP24-EN0??
+  - set_number: OP24-EN003
     set_name: OTS Tournament Pack 24
     rarities:
+    - Ultimate Rare
   - set_number: SDD-003
     set_name: 'Yu-Gi-Oh! Worldwide Edition: Stairway to the Destined Duel promotional cards'
     rarities:
@@ -140,9 +141,10 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
-  - set_number: OP24-DE0??
+  - set_number: OP24-DE003
     set_name: OTS Tournament Pack 24
     rarities:
+    - Ultimate Rare
   fr:
   - set_number: WC4-F003
     set_name: Yu-Gi-Oh! World Championship Tournament 2004 promotional cards
@@ -185,9 +187,10 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
-  - set_number: OP24-FR0??
+  - set_number: OP24-FR003
     set_name: OTS Tournament Pack 24
     rarities:
+    - Ultimate Rare
   it:
   - set_number: WC4-I003
     set_name: Yu-Gi-Oh! World Championship Tournament 2004 promotional cards
@@ -230,9 +233,10 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
-  - set_number: OP24-IT0??
+  - set_number: OP24-IT003
     set_name: OTS Tournament Pack 24
     rarities:
+    - Ultimate Rare
   pt:
   - set_number: LCJW-PT099
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
@@ -258,9 +262,10 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
-  - set_number: OP24-PT0??
+  - set_number: OP24-PT003
     set_name: OTS Tournament Pack 24
     rarities:
+    - Ultimate Rare
   ja:
   - set_number: ''
     set_name: 'Yu-Gi-Oh! Duel Monsters II: Dark duel Stories promotional cards'
