--- a/data/cards/36183881.yaml
+++ b/data/cards/36183881.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 威风魔灵・龙卷
 text:
   en: |-
-    Tribute 1 WIND Spellcaster-Type monster, then target 1 monster your opponent controls; banish it.
+    Tribute 1 WIND Spellcaster monster, then target 1 monster your opponent controls; banish it.
   de: |-
     Biete 1 WIND Monster vom Typ Hexer als Tribut an und wähle dann 1 Monster, das dein Gegner kontrolliert; verbanne es.
   es: |-
@@ -51,6 +51,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP24-EN026
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   de:
   - set_number: DOCS-DE072
     set_name: Dimension of Chaos
@@ -60,6 +64,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP24-DE026
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   fr:
   - set_number: DOCS-FR072
     set_name: Dimension of Chaos
@@ -69,6 +77,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP24-FR026
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   it:
   - set_number: DOCS-IT072
     set_name: Dimension of Chaos
@@ -78,6 +90,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP24-IT026
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   pt:
   - set_number: DOCS-PT072
     set_name: Dimension of Chaos
@@ -87,6 +103,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: OP24-PT026
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   ja:
   - set_number: DOCS-JP072
     set_name: Dimension of Chaos
