--- a/data/cards/51119924.yaml
+++ b/data/cards/51119924.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 傀儡植物
 text:
   en: |-
-    You can discard this card to the Graveyard, then target 1 Warrior or Spellcaster-Type monster your opponent controls; take control of that target until the End Phase.
+    You can discard this card to the GY, then target 1 Warrior or Spellcaster monster your opponent controls; take control of that target until the End Phase.
   de: |-
     Du kannst diese Karte auf den Friedhof abwerfen und dann 1 Monster vom Typ Krieger oder Hexer wählen, das dein Gegner kontrolliert; übernimm bis zur End Phase die Kontrolle über das gewählte Ziel.
   es: |-
@@ -44,7 +44,7 @@ series:
 - Puppet
 images:
 - index: 1
-  image: PuppetPlant-YSKR-EN-C-1E.png
+  image: PuppetPlant-OP24-EN-C-UE.png
 sets:
   en:
   - set_number: STON-EN022
@@ -57,6 +57,10 @@ sets:
     - Rare
   - set_number: YSKR-EN022
     set_name: 'Starter Deck: Kaiba Reloaded'
+    rarities:
+    - Common
+  - set_number: OP24-EN016
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   de:
@@ -72,6 +76,10 @@ sets:
     set_name: 'Starter Deck: Kaiba Reloaded'
     rarities:
     - Common
+  - set_number: OP24-DE016
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   fr:
   - set_number: STON-FR022
     set_name: Strike of Neos
@@ -83,6 +91,10 @@ sets:
     - Rare
   - set_number: YSKR-FR022
     set_name: 'Starter Deck: Kaiba Reloaded'
+    rarities:
+    - Common
+  - set_number: OP24-FR016
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   it:
@@ -98,9 +110,17 @@ sets:
     set_name: 'Starter Deck: Kaiba Reloaded'
     rarities:
     - Common
+  - set_number: OP24-IT016
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   pt:
   - set_number: YSKR-PT022
     set_name: 'Starter Deck: Kaiba Reloaded'
+    rarities:
+    - Common
+  - set_number: OP24-PT016
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   ja:
