--- a/data/cards/57160136.yaml
+++ b/data/cards/57160136.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: OP24-EN025
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   de:
   - set_number: DANE-DE051
     set_name: Dark Neostorm
@@ -76,6 +80,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: OP24-DE025
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   fr:
   - set_number: DANE-FR051
     set_name: Dark Neostorm
@@ -93,6 +101,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: OP24-FR025
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   it:
   - set_number: DANE-IT051
     set_name: Dark Neostorm
@@ -110,6 +122,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: OP24-IT025
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   pt:
   - set_number: DANE-PT051
     set_name: Dark Neostorm
@@ -127,6 +143,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Rare
+  - set_number: OP24-PT025
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   ja:
   - set_number: DANE-JP051
     set_name: Dark Neostorm
