--- a/data/cards/73347079.yaml
+++ b/data/cards/73347079.yaml
@@ -70,6 +70,10 @@ sets:
     set_name: OTS Tournament Pack 14
     rarities:
     - Super Rare
+  - set_number: OP24-EN022
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   de:
   - set_number: WIRA-DE022
     set_name: Wing Raiders
@@ -83,6 +87,10 @@ sets:
     set_name: OTS Tournament Pack 14
     rarities:
     - Super Rare
+  - set_number: OP24-DE022
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   fr:
   - set_number: WIRA-FR022
     set_name: Wing Raiders
@@ -96,6 +104,10 @@ sets:
     set_name: OTS Tournament Pack 14
     rarities:
     - Super Rare
+  - set_number: OP24-FR022
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   it:
   - set_number: WIRA-IT022
     set_name: Wing Raiders
@@ -109,6 +121,10 @@ sets:
     set_name: OTS Tournament Pack 14
     rarities:
     - Super Rare
+  - set_number: OP24-IT022
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   pt:
   - set_number: WIRA-PT022
     set_name: Wing Raiders
@@ -122,6 +138,10 @@ sets:
     set_name: OTS Tournament Pack 14
     rarities:
     - Super Rare
+  - set_number: OP24-PT022
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   ja:
   - set_number: VP14-JPA05
     set_name: Special Summon Evolution
