--- a/data/cards/83236601.yaml
+++ b/data/cards/83236601.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: OP24-EN018
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   de:
   - set_number: WIRA-DE021
     set_name: Wing Raiders
@@ -64,6 +68,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: OP24-DE018
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   fr:
   - set_number: WIRA-FR021
     set_name: Wing Raiders
@@ -73,6 +81,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: OP24-FR018
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   it:
   - set_number: WIRA-IT021
     set_name: Wing Raiders
@@ -82,6 +94,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: OP24-IT018
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   pt:
   - set_number: WIRA-PT021
     set_name: Wing Raiders
@@ -91,6 +107,10 @@ sets:
     set_name: Ghosts From the Past (set)
     rarities:
     - Ultra Rare
+  - set_number: OP24-PT018
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   ja:
   - set_number: VJMP-JP097
     set_name: V Jump April 2015 promotional card
