--- a/data/cards/17597059.yaml
+++ b/data/cards/17597059.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
+  - set_number: OP24-EN014
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   - set_number: PGD-103
     set_name: Pharaonic Guardian
     rarities:
@@ -66,6 +70,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
+  - set_number: OP24-DE014
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   fr:
   - set_number: DR1-FR052
     set_name: Dark Revelation Volume 1
@@ -73,6 +81,10 @@ sets:
     - Ultra Rare
   - set_number: SS05-FRB12
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
+    rarities:
+    - Common
+  - set_number: OP24-FR014
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   it:
@@ -84,6 +96,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
+  - set_number: OP24-IT014
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   pt:
   - set_number: DR1-PT052
     set_name: Dark Revelation Volume 1
@@ -91,6 +107,10 @@ sets:
     - Ultra Rare
   - set_number: SS05-PTB12
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
+    rarities:
+    - Common
+  - set_number: OP24-PT014
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   ja:
