--- a/data/cards/18158393.yaml
+++ b/data/cards/18158393.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP24-EN013
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   de:
   - set_number: CYAC-DE073
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP24-DE013
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   fr:
   - set_number: CYAC-FR073
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP24-FR013
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   it:
   - set_number: CYAC-IT073
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP24-IT013
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   pt:
   - set_number: CYAC-PT073
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP24-PT013
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   ja:
   - set_number: CYAC-JP073
     set_name: Cyberstorm Access
