--- a/data/cards/21347668.yaml
+++ b/data/cards/21347668.yaml
@@ -65,41 +65,46 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Common
-  - set_number: OP24-EN0??
+  - set_number: OP24-EN010
     set_name: OTS Tournament Pack 24
     rarities:
+    - Super Rare
   de:
   - set_number: CYAC-DE061
     set_name: Cyberstorm Access
     rarities:
     - Common
-  - set_number: OP24-DE0??
+  - set_number: OP24-DE010
     set_name: OTS Tournament Pack 24
     rarities:
+    - Super Rare
   fr:
   - set_number: CYAC-FR061
     set_name: Cyberstorm Access
     rarities:
     - Common
-  - set_number: OP24-FR0??
+  - set_number: OP24-FR010
     set_name: OTS Tournament Pack 24
     rarities:
+    - Super Rare
   it:
   - set_number: CYAC-IT061
     set_name: Cyberstorm Access
     rarities:
     - Common
-  - set_number: OP24-IT0??
+  - set_number: OP24-IT010
     set_name: OTS Tournament Pack 24
     rarities:
+    - Super Rare
   pt:
   - set_number: CYAC-PT061
     set_name: Cyberstorm Access
     rarities:
     - Common
-  - set_number: OP24-PT0??
+  - set_number: OP24-PT010
     set_name: OTS Tournament Pack 24
     rarities:
+    - Super Rare
   ja:
   - set_number: CYAC-JP061
     set_name: Cyberstorm Access
