--- a/data/cards/26236560.yaml
+++ b/data/cards/26236560.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Common
+  - set_number: OP24-EN005
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   de:
   - set_number: CHIM-DE008
     set_name: Chaos Impact
@@ -66,6 +70,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Common
+  - set_number: OP24-DE005
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   fr:
   - set_number: CHIM-FR008
     set_name: Chaos Impact
@@ -76,6 +84,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Common
+  - set_number: OP24-FR005
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   it:
   - set_number: CHIM-IT008
     set_name: Chaos Impact
@@ -86,6 +98,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Common
+  - set_number: OP24-IT005
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   pt:
   - set_number: CHIM-PT008
     set_name: Chaos Impact
@@ -96,6 +112,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Common
+  - set_number: OP24-PT005
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   ja:
   - set_number: CHIM-JP008
     set_name: Chaos Impact
