--- a/data/cards/28168628.yaml
+++ b/data/cards/28168628.yaml
@@ -88,7 +88,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
-  - set_number: OP24-EN0??
+  - set_number: OP24-EN002
     set_name: OTS Tournament Pack 24
     rarities:
     - Ultimate Rare
@@ -97,7 +97,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
-  - set_number: OP24-DE0??
+  - set_number: OP24-DE002
     set_name: OTS Tournament Pack 24
     rarities:
     - Ultimate Rare
@@ -106,7 +106,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
-  - set_number: OP24-FR0??
+  - set_number: OP24-FR002
     set_name: OTS Tournament Pack 24
     rarities:
     - Ultimate Rare
@@ -115,7 +115,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
-  - set_number: OP24-IT0??
+  - set_number: OP24-IT002
     set_name: OTS Tournament Pack 24
     rarities:
     - Ultimate Rare
@@ -124,7 +124,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Ultra Rare
-  - set_number: OP24-PT0??
+  - set_number: OP24-PT002
     set_name: OTS Tournament Pack 24
     rarities:
     - Ultimate Rare
