--- a/data/cards/37629703.yaml
+++ b/data/cards/37629703.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
+  - set_number: OP24-EN006
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   de:
   - set_number: TAMA-DE018
     set_name: Tactical Masters
@@ -64,6 +68,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
+  - set_number: OP24-DE006
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   fr:
   - set_number: TAMA-FR018
     set_name: Tactical Masters
@@ -73,6 +81,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
+  - set_number: OP24-FR006
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   it:
   - set_number: TAMA-IT018
     set_name: Tactical Masters
@@ -82,6 +94,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
+  - set_number: OP24-IT006
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   pt:
   - set_number: TAMA-PT018
     set_name: Tactical Masters
@@ -91,6 +107,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
+  - set_number: OP24-PT006
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBTM-JP018
     set_name: 'Deck Build Pack: Tactical Masters'
