--- a/data/cards/41165831.yaml
+++ b/data/cards/41165831.yaml
@@ -53,26 +53,46 @@ sets:
     set_name: Duelist Nexus
     rarities:
     - Common
+  - set_number: OP24-EN008
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   de:
   - set_number: DUNE-DE019
     set_name: Duelist Nexus
     rarities:
     - Common
+  - set_number: OP24-DE008
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   fr:
   - set_number: DUNE-FR019
     set_name: Duelist Nexus
     rarities:
     - Common
+  - set_number: OP24-FR008
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   it:
   - set_number: DUNE-IT019
     set_name: Duelist Nexus
     rarities:
     - Common
+  - set_number: OP24-IT008
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   pt:
   - set_number: DUNE-PT019
     set_name: Duelist Nexus
     rarities:
     - Common
+  - set_number: OP24-PT008
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   ja:
   - set_number: DUNE-JP019
     set_name: Duelist Nexus
