--- a/data/cards/42052439.yaml
+++ b/data/cards/42052439.yaml
@@ -49,26 +49,46 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Ultra Rare
+  - set_number: OP24-EN019
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   de:
   - set_number: BLAR-DE034
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Ultra Rare
+  - set_number: OP24-DE019
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   fr:
   - set_number: BLAR-FR034
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Ultra Rare
+  - set_number: OP24-FR019
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   it:
   - set_number: BLAR-IT034
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Ultra Rare
+  - set_number: OP24-IT019
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   pt:
   - set_number: BLAR-PT034
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Ultra Rare
+  - set_number: OP24-PT019
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   ja:
   - set_number: CP20-JP034
     set_name: Collection Pack 2020
