--- a/data/cards/52159691.yaml
+++ b/data/cards/52159691.yaml
@@ -73,6 +73,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Rare
+  - set_number: OP24-EN020
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   de:
   - set_number: PHRA-DE001
     set_name: Phantom Rage
@@ -82,6 +86,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Rare
+  - set_number: OP24-DE020
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   fr:
   - set_number: PHRA-FR001
     set_name: Phantom Rage
@@ -91,6 +99,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Rare
+  - set_number: OP24-FR020
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   it:
   - set_number: PHRA-IT001
     set_name: Phantom Rage
@@ -100,6 +112,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Rare
+  - set_number: OP24-IT020
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   pt:
   - set_number: PHRA-PT001
     set_name: Phantom Rage
@@ -109,6 +125,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Rare
+  - set_number: OP24-PT020
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   ja:
   - set_number: PHRA-JP001
     set_name: Phantom Rage
