--- a/data/cards/63086455.yaml
+++ b/data/cards/63086455.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
+  - set_number: OP24-EN011
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   de:
   - set_number: POTE-DE078
     set_name: Power of the Elements
@@ -67,6 +71,10 @@ sets:
     set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
+  - set_number: OP24-DE011
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   fr:
   - set_number: POTE-FR078
     set_name: Power of the Elements
@@ -80,6 +88,10 @@ sets:
     set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
+  - set_number: OP24-FR011
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   it:
   - set_number: POTE-IT078
     set_name: Power of the Elements
@@ -93,6 +105,10 @@ sets:
     set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
+  - set_number: OP24-IT011
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   pt:
   - set_number: POTE-PT078
     set_name: Power of the Elements
@@ -106,6 +122,10 @@ sets:
     set_name: 'Structure Deck: The Crimson King'
     rarities:
     - Common
+  - set_number: OP24-PT011
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   ja:
   - set_number: POTE-JP078
     set_name: Power of the Elements
