--- a/data/cards/80566312.yaml
+++ b/data/cards/80566312.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 祝祷圣歌
 text:
   en: |-
-    This card is used to Ritual Summon "Saffira, Queen of Dragons". You must also Tribute monsters from your hand or field whose total Levels equal 6 or more. If a Ritual Monster(s) you control would be destroyed by battle or card effect while this card is in your Graveyard, you can banish this card instead.
+    This card is used to Ritual Summon "Saffira, Queen of Dragons". You must also Tribute monsters from your hand or field whose total Levels equal 6 or more. If a Ritual Monster(s) you control would be destroyed by battle or card effect, you can banish this card from your GY instead.
   de: |-
     Diese Karte wird verwendet, um „Saffira, Königin der Drachen“ als Ritualbeschwörung zu beschwören. Du musst zusätzlich Monster von deiner Hand oder deiner Spielfeldseite als Tribut anbieten, deren gemeinsame Stufe 6 oder mehr entspricht. Falls ein oder mehr Ritualmonster, die du kontrollierst, durch Kampf oder einen Karteneffekt zerstört würden, solange sich diese Karte in deinem Friedhof befindet, kannst du stattdessen diese Karte verbannen.
   es: |-
@@ -50,6 +50,10 @@ sets:
     set_name: 2015 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP24-EN023
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   de:
   - set_number: DUEA-DE063
     set_name: Duelist Alliance
@@ -57,6 +61,10 @@ sets:
     - Common
   - set_number: MP15-DE107
     set_name: 2015 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: OP24-DE023
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   fr:
@@ -68,6 +76,10 @@ sets:
     set_name: 2015 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP24-FR023
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   it:
   - set_number: DUEA-IT063
     set_name: Duelist Alliance
@@ -77,6 +89,10 @@ sets:
     set_name: 2015 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP24-IT023
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   pt:
   - set_number: DUEA-PT063
     set_name: Duelist Alliance
@@ -84,6 +100,10 @@ sets:
     - Common
   - set_number: MP15-PT107
     set_name: 2015 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: OP24-PT023
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   ja:
