--- a/data/cards/82983267.yaml
+++ b/data/cards/82983267.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: OP24-EN012
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   de:
   - set_number: AMDE-DE024
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: OP24-DE012
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   fr:
   - set_number: AMDE-FR024
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: OP24-FR012
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   it:
   - set_number: AMDE-IT024
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: OP24-IT012
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   pt:
   - set_number: AMDE-PT024
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: OP24-PT012
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBAD-JP024
     set_name: 'Deck Build Pack: Amazing Defenders'
