--- a/data/cards/83986578.yaml
+++ b/data/cards/83986578.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 王虎
 text:
   en: |-
-    When a monster(s) with 1400 or less ATK is Normal Summoned or Special Summoned: Destroy those monsters with 1400 or less ATK. This card must be face-up on the field to activate and to resolve this effect.
+    If a monster(s) with 1400 or less ATK is Normal or Special Summoned while you control this card: Destroy those monsters with 1400 or less ATK. This card must be face-up on the field to activate and to resolve this effect.
   de: |-
     Wenn Monster mit 1400 oder weniger ATK als Normal- oder Spezialbeschwörung beschworen werden: Zerstöre die beschworenen Monster mit 1400 oder weniger ATK. Diese Karte muss offen auf dem Spielfeld liegen, um diesen Effekt zu aktivieren und aufzulösen.
   es: |-
@@ -42,7 +42,7 @@ atk: 1700
 def: 1000
 images:
 - index: 1
-  image: KingTigerWanghu-BP01-EN-C-1E.png
+  image: KingTigerWanghu-OP24-EN-SR-UE.png
 sets:
   en:
   - set_number: DB2-EN207
@@ -58,6 +58,10 @@ sets:
     rarities:
     - Common
     - Starfoil Rare
+  - set_number: OP24-EN004
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   - set_number: PGD-004
     set_name: Pharaonic Guardian
     rarities:
@@ -76,6 +80,10 @@ sets:
     rarities:
     - Common
     - Starfoil Rare
+  - set_number: OP24-DE004
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   fr:
   - set_number: DB2-FR207
     set_name: Dark Beginning 2
@@ -90,6 +98,10 @@ sets:
     rarities:
     - Common
     - Starfoil Rare
+  - set_number: OP24-FR004
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   it:
   - set_number: DB2-IT207
     set_name: Dark Beginning 2
@@ -104,6 +116,15 @@ sets:
     rarities:
     - Common
     - Starfoil Rare
+  - set_number: OP24-IT004
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: OP24-PT004
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   ja:
   - set_number: PH-04
     set_name: Pharaonic Guardian (Japanese)
