--- a/data/cards/87514539.yaml
+++ b/data/cards/87514539.yaml
@@ -57,6 +57,10 @@ sets:
     set_name: 'Structure Deck: Zombie Horde'
     rarities:
     - Common
+  - set_number: OP24-EN017
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   de:
   - set_number: STON-DE023
     set_name: Strike of Neos
@@ -68,6 +72,10 @@ sets:
     - Common
   - set_number: SR07-DE020
     set_name: 'Structure Deck: Zombie Horde'
+    rarities:
+    - Common
+  - set_number: OP24-DE017
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   fr:
@@ -83,6 +91,10 @@ sets:
     set_name: 'Structure Deck: Zombie Horde'
     rarities:
     - Common
+  - set_number: OP24-FR017
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   it:
   - set_number: STON-IT023
     set_name: Strike of Neos
@@ -96,9 +108,17 @@ sets:
     set_name: 'Structure Deck: Zombie Horde'
     rarities:
     - Common
+  - set_number: OP24-IT017
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Common
   pt:
   - set_number: SR07-PT020
     set_name: 'Structure Deck: Zombie Horde'
+    rarities:
+    - Common
+  - set_number: OP24-PT017
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   ja:
