--- a/data/cards/92565383.yaml
+++ b/data/cards/92565383.yaml
@@ -53,26 +53,46 @@ sets:
     set_name: Duelist Nexus
     rarities:
     - Common
+  - set_number: OP24-EN007
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   de:
   - set_number: DUNE-DE005
     set_name: Duelist Nexus
     rarities:
     - Common
+  - set_number: OP24-DE007
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   fr:
   - set_number: DUNE-FR005
     set_name: Duelist Nexus
     rarities:
     - Common
+  - set_number: OP24-FR007
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   it:
   - set_number: DUNE-IT005
     set_name: Duelist Nexus
     rarities:
     - Common
+  - set_number: OP24-IT007
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   pt:
   - set_number: DUNE-PT005
     set_name: Duelist Nexus
     rarities:
     - Common
+  - set_number: OP24-PT007
+    set_name: OTS Tournament Pack 24
+    rarities:
+    - Super Rare
   ja:
   - set_number: DUNE-JP005
     set_name: Duelist Nexus
