--- a/data/cards/08165596.yaml
+++ b/data/cards/08165596.yaml
@@ -76,41 +76,46 @@ sets:
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
-  - set_number: ????-EN???
+  - set_number: BLC1-EN018
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   de:
   - set_number: BLRR-DE033
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
-  - set_number: ????-DE???
+  - set_number: BLC1-DE018
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   fr:
   - set_number: BLRR-FR033
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
-  - set_number: ????-FR???
+  - set_number: BLC1-FR018
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   it:
   - set_number: BLRR-IT033
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
-  - set_number: ????-IT???
+  - set_number: BLC1-IT018
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   pt:
   - set_number: BLRR-PT033
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
-  - set_number: ????-PT???
+  - set_number: BLC1-PT018
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   ja:
   - set_number: CP18-JP033
     set_name: Collectors Pack 2018
