--- a/data/cards/23274061.yaml
+++ b/data/cards/23274061.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 电气红松鼠
 text:
   en: |-
-    This card can attack twice during each Battle Phase. If this card battles, negate the effects of the monster it battled, after damage calculation (including in the Graveyard).
+    This card can make a second attack during each Battle Phase. After damage calculation, if this card battled a monster: Negate the effects of that monster (including in the GY).
   de: |-
     Diese Karte kann während jeder Battle Phase zweimal angreifen. Falls diese Karte kämpft, annulliere nach der Schadensberechnung die Effekte der Monster, gegen die sie gekämpft hat (einschließlich Monstern im Friedhof).
   es: |-
