--- a/data/cards/68987122.yaml
+++ b/data/cards/68987122.yaml
@@ -70,26 +70,46 @@ sets:
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: BLC1-EN019
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BLRR-DE044
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: BLC1-DE019
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BLRR-FR044
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: BLC1-FR019
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BLRR-IT044
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: BLC1-IT019
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BLRR-PT044
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: BLC1-PT019
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CP18-JP044
     set_name: Collectors Pack 2018
