--- a/data/cards/15744417.yaml
+++ b/data/cards/15744417.yaml
@@ -66,26 +66,46 @@ sets:
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: BLC1-EN016
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BLRR-DE001
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: BLC1-DE016
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BLRR-FR001
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: BLC1-FR016
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BLRR-IT001
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: BLC1-IT016
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BLRR-PT001
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: BLC1-PT016
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CP18-JP001
     set_name: Collectors Pack 2018
