--- a/data/cards/40044918.yaml
+++ b/data/cards/40044918.yaml
@@ -109,6 +109,10 @@ sets:
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Secret Rare
+  - set_number: BLC1-EN022
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   - set_number: JUMP-EN012
     set_name: Shonen Jump Vol. 5, Issue 4 promotional card
     rarities:
@@ -171,6 +175,10 @@ sets:
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Secret Rare
+  - set_number: BLC1-DE022
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: PT03-FR002
     set_name: Pharaoh Tour 2007 promotional cards
@@ -213,6 +221,10 @@ sets:
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Secret Rare
+  - set_number: BLC1-FR022
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: PT03-IT002
     set_name: Pharaoh Tour 2007 promotional cards
@@ -259,6 +271,10 @@ sets:
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Secret Rare
+  - set_number: BLC1-IT022
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: OP09-PT001
     set_name: OTS Tournament Pack 9
@@ -285,6 +301,10 @@ sets:
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Secret Rare
+  - set_number: BLC1-PT022
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: VJMP-JP017
     set_name: V Jump October 2006 promotional card
