--- a/data/cards/70095154.yaml
+++ b/data/cards/70095154.yaml
@@ -173,6 +173,14 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: BLC1-EN020
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
+  - set_number: BLC1-EN021
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   - set_number: MF03-EN009
     set_name: 'Mattel Action Figure promotional cards: Series 3'
     rarities:
@@ -327,6 +335,14 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: BLC1-DE020
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
+  - set_number: BLC1-DE021
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: CRV-FR015
     set_name: Cybernetic Revolution
@@ -445,6 +461,14 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: BLC1-FR020
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
+  - set_number: BLC1-FR021
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: CRV-IT015
     set_name: Cybernetic Revolution
@@ -571,6 +595,14 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: BLC1-IT020
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
+  - set_number: BLC1-IT021
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: CRV-PT015
     set_name: Cybernetic Revolution
@@ -656,6 +688,14 @@ sets:
     set_name: 2-Player Starter Set
     rarities:
     - Common
+  - set_number: BLC1-PT020
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
+  - set_number: BLC1-PT021
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CRV-JP015
     set_name: Cybernetic Revolution
