--- a/data/rush/yugipedia1041934.yaml
+++ b/data/rush/yugipedia1041934.yaml
@@ -12,9 +12,21 @@ name:
   ko_rr:
   zh-TW:
   zh-CN:
+summoning_condition:
+  en: |-
+    You can Tribute Summon this card in Attack Position by Tributing 3 monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
 requirement:
   en: |-
-    TBA
+    During the turn you Normal Summoned this card the above way, shuffle 5 monsters from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -26,7 +38,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    TBA
+    Destroy all face-up monsters with the highest Level on your opponent's field. Then, you can inflict damage to your opponent equal to [the total ATK of the face-up monsters on their field].
   de:
   es:
   fr:
