--- a/data/cards/46897277.yaml
+++ b/data/cards/46897277.yaml
@@ -6,7 +6,7 @@ name:
   es: Wattzorro
   fr: Electro-renard
   it: Wattvolpe
-  pt:
+  pt: Wattraposa
   ja: エレキツネ
   ja_romaji: Erekitsune
   ko: 일렉여우
@@ -64,6 +64,11 @@ sets:
   it:
   - set_number: TSHD-IT026
     set_name: The Shining Darkness
+    rarities:
+    - Common
+  pt:
+  - set_number: OP24-PT030
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   ja:
