--- a/data/cards/53193261.yaml
+++ b/data/cards/53193261.yaml
@@ -6,7 +6,7 @@ name:
   es: Wattllave
   fr: Électro-Clé
   it: Wattchiave
-  pt:
+  pt: Wattchave
   ja: エレキー
   ja_romaji: Erekī
   ko: 일렉키
@@ -60,6 +60,11 @@ sets:
   it:
   - set_number: STOR-IT054
     set_name: Storm of Ragnarok
+    rarities:
+    - Common
+  pt:
+  - set_number: OP24-PT036
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   ja:
