--- a/data/cards/65612454.yaml
+++ b/data/cards/65612454.yaml
@@ -6,7 +6,7 @@ name:
   es: Wattcubo
   fr: Électro-Cube
   it: Wattcubo
-  pt:
+  pt: Wattcubo
   ja: エレキューブ
   ja_romaji: Erekyūbu
   ko: 일렉큐브
@@ -60,6 +60,11 @@ sets:
   it:
   - set_number: TSHD-IT054
     set_name: The Shining Darkness
+    rarities:
+    - Common
+  pt:
+  - set_number: OP24-PT034
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   ja:
