--- a/data/cards/95084054.yaml
+++ b/data/cards/95084054.yaml
@@ -6,7 +6,7 @@ name:
   es: Wattcañón
   fr: Électro-Canon
   it: Wattcannone
-  pt:
+  pt: Wattcanhão
   ja: エレキャノン
   ja_romaji: Erekyanon
   ko: 일렉캐논
@@ -60,6 +60,11 @@ sets:
   it:
   - set_number: DREV-IT071
     set_name: Duelist Revolution
+    rarities:
+    - Common
+  pt:
+  - set_number: OP24-PT037
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   ja:
