--- a/data/cards/12296376.yaml
+++ b/data/cards/12296376.yaml
@@ -6,7 +6,7 @@ name:
   es: Wattcarpintero
   fr: Électro-Pic Vert
   it: Wattpicchio
-  pt:
+  pt: Wattpicapau
   ja: エレキツツキ
   ja_romaji: Erekitsutsuki
   ko: 일렉딱따구리
@@ -64,6 +64,11 @@ sets:
   it:
   - set_number: TSHD-IT027
     set_name: The Shining Darkness
+    rarities:
+    - Common
+  pt:
+  - set_number: OP24-PT031
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   ja:
