--- a/data/cards/32548609.yaml
+++ b/data/cards/32548609.yaml
@@ -6,7 +6,7 @@ name:
   es: Watttopo
   fr: Electro-Taupe
   it: Watttalpa
-  pt:
+  pt: Wattoupeira
   ja: エレキンモグラ
   ja_romaji: Erekinmogura
   ko: 일렉두더지
@@ -64,6 +64,11 @@ sets:
   it:
   - set_number: STOR-IT032
     set_name: Storm of Ragnarok
+    rarities:
+    - Common
+  pt:
+  - set_number: OP24-PT033
+    set_name: OTS Tournament Pack 24
     rarities:
     - Common
   ja:
