--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -3551,17 +3551,17 @@
   zh-TW:
   zh-CN:
 - en: Earthbound
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Erdgebunden
+  es: Terrestre
+  fr: Esprit de la Terre
+  it: Terrestre
+  pt: Terrestre
   ja: <ruby>地<rt>じ</rt></ruby><ruby>縛<rt>ばく</rt></ruby>
   ja_romaji: Jibaku
-  ko:
+  ko: 지박
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 地缚
 - en: Veda
   de: Veda
   es: Vedas
