--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -3539,17 +3539,17 @@ Recipe:
   zh-TW:
   zh-CN:
 Earthbound:
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Erdgebunden
+  es: Terrestre
+  fr: Esprit de la Terre
+  it: Terrestre
+  pt: Terrestre
   ja: <ruby>地<rt>じ</rt></ruby><ruby>縛<rt>ばく</rt></ruby>
   ja_romaji: Jibaku
-  ko:
+  ko: 지박
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 地缚
 Veda:
   de: Veda
   es: Vedas
